# aio_send_dir

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  pre-commit.yml  publish.yml  ruff.yml  semgrep.yml  tests.yml  trivy.yml
aio_send_dir/: __init__.py  v1.py
tests/: test_v1.py
